--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -19,6 +19,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip setuptools
         pip install .
+    - name: Install test dependencies
+      run: |
+        pip install ".[tests]"
     - name: Run tests
       run: |
         pytest
