--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -24,4 +24,7 @@ jobs:
         pip install ".[tests]"
     - name: Run tests
       run: |
+        echo 'Current dir'
+        pwd
+        ls
         pytest
