--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -24,4 +24,4 @@ jobs:
         python -m pip install ".[tests]"
     - name: Run tests
       run: |
-        python -m pytest ./mtgcurve
+        python -m pytest ./azusa
